--- a/terraform/app-destroy.yaml
+++ b/terraform/app-destroy.yaml
@@ -25,6 +25,6 @@ spec:
                     -   name: TF_VAR_team_name
                         value: team4
                     args:
-                      - destroy
+                      - 'destroy -auto-approve'
             restartPolicy: Never
     backoffLimit: 4
